--- a/app/src/main/res/layout/fragment_one_news.xml
+++ b/app/src/main/res/layout/fragment_one_news.xml
@@ -6,7 +6,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:background="@color/white">
 
     <ImageView
         android:layout_width="match_parent"
@@ -15,12 +17,13 @@
 
     <TextView
         android:text="@string/one_news_data"
-        android:id="@+id/one_news_data"
+        android:id="@+id/one_news_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:layout_margin="10dp"/>
     <TextView
+        android:id="@+id/one_news_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
