--- a/app/src/main/res/layout/one_news_at_list.xml
+++ b/app/src/main/res/layout/one_news_at_list.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:text="@string/news_title_list"
             android:id="@+id/news_title_list"
             android:textSize="20sp"
