--- a/app/src/main/res/layout/fragment_one_news.xml
+++ b/app/src/main/res/layout/fragment_one_news.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,42 +6,64 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     android:clickable="true"
-    android:background="@color/white">
+    android:background="@color/white"
+>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/one_news_image"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:clickable="true"
+        android:background="@color/white"
 
-    <TextView
-        android:text="@string/one_news_data"
-        android:id="@+id/one_news_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:layout_margin="10dp"/>
-    <TextView
-        android:id="@+id/one_news_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:text="@string/one_news_title"
-        android:layout_margin="10dp"
-        android:textStyle="bold"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/one_news_category"
-        android:id="@+id/one_news_category"
-        android:layout_margin="10dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/one_news_description"
-        android:id="@+id/one_news_description"
-        />
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <ImageView
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/one_news_image" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/one_news_category"
+                android:id="@+id/one_news_category"
+                android:gravity="left"
+                android:layout_weight="2"
+                android:textStyle="bold" />
+
+            <TextView
+                android:text="@string/one_news_data"
+                android:id="@+id/one_news_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/one_news_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:text="@string/one_news_title"
+            android:layout_margin="10dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/one_news_description"
+            android:id="@+id/one_news_description" />
+
+
+    </LinearLayout>
+</ScrollView>
