--- a/app/src/main/res/layout/fragment_one_news.xml
+++ b/app/src/main/res/layout/fragment_one_news.xml
@@ -7,21 +7,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:clickable="true"
-    android:background="@color/white"
->
+    android:background="@color/white">
 
     <LinearLayout
         android:orientation="vertical"
         android:clickable="true"
         android:background="@color/white"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:id="@+id/one_news_image" />
 
         <LinearLayout
@@ -63,7 +61,6 @@
             android:layout_height="wrap_content"
             android:text="@string/one_news_description"
             android:id="@+id/one_news_description" />
-
-
     </LinearLayout>
+
 </ScrollView>
